<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/White"
    android:gravity="center_horizontal|center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="프리미엄 토핑과 스페셜 엣지로 빵 끝까지"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="맛있게 즐길 수 있는 프리미엄 피자"
            android:layout_marginBottom="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza1"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:src="@drawable/pizza1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza1"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza2"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:src="@drawable/pizza2"
                android:background="@android:color/transparent"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza2"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza3"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza3" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza3"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza4"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza4" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza4"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza5"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza5" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza5"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza6"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza6" />

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza6"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza7"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza7" />

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza7"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza8"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza8" />

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza8"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza9"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza9" />

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza9"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza10"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza10" />

            <TextView
                android:id="@+id/txt10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza10"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza11"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza11" />

            <TextView
                android:id="@+id/txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza11"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/pizza12"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/pizza12" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza12"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Gray"
                android:text="@string/pizza_add"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/pizza_result"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>